Unpaintable transparent triangles with texture paint #44791

Closed
opened 2015-05-20 21:37:42 +02:00 by WK Bong · 12 comments

System Information
Win7 64bit GTX 560ti

Blender Version
Broken: 2.74 to 2.74.5 05c4c24

Short description of error
At specific size/position, some parts of the plane cannot be painted.
Unpaintable.blend.png

Exact steps for others to reproduce the error
Blendfile: Unpaintable.blend

  1. set this argument to run blender "-p 100 100 1280 720"
  2. paint randomly on the plane
**System Information** Win7 64bit GTX 560ti **Blender Version** Broken: 2.74 to 2.74.5 05c4c24 **Short description of error** At specific size/position, some parts of the plane cannot be painted. ![Unpaintable.blend.png](https://archive.blender.org/developer/F178113/Unpaintable.blend.png) **Exact steps for others to reproduce the error** Blendfile: [Unpaintable.blend](https://archive.blender.org/developer/F178115/Unpaintable.blend) 1. set this argument to run blender "-p 100 100 1280 720" 2. paint randomly on the plane
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WeeKwongBong

Added subscriber: @WeeKwongBong

Added subscriber: @johnsonlm

Added subscriber: @johnsonlm

I can reproduce this exactly as posted above. (Windows 7 64x, 2.74 3593082)

I can reproduce this exactly as posted above. (Windows 7 64x, 2.74 3593082)
Author

confirm problem at a1e8547 (Win7 64 bit)

confirm problem at a1e8547 (Win7 64 bit)

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Confirmed. Man this is going to be hard to solve....

Confirmed. Man this is going to be hard to solve....
Antonis Ryakiotakis self-assigned this 2015-05-21 11:20:37 +02:00

Investigation results for the record: Very old bug (tested up to 2.71) and cause is boundary detections for tiles fail in project_bucket_clip_face. Hope to fix soon...

Investigation results for the record: Very old bug (tested up to 2.71) and cause is boundary detections for tiles fail in project_bucket_clip_face. Hope to fix soon...
Author

Cool. At least we have some clue of the cause.

Cool. At least we have some clue of the cause.

This issue was referenced by d3c67bc81e

This issue was referenced by d3c67bc81e29ce3fc323be2c22432b583d8e3084

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you!

Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44791
No description provided.